@@ -1,5 +1,1 @@
-svn stat|egrep -v '.swp|.pyc|lib/os|lib/net'
-for DIR in lib/config lib/os lib/net lib/patterns lib/util lib/workflow
-    do
-        svn stat $DIR|egrep -v '.swp|.pyc'
-    done
+svn stat|egrep -v '.swp|.pyc|build|dist|egg-info'
